Finished navbar, works perfectly

--- a/index.html
+++ b/index.html
@@ -18,15 +18,17 @@
   <div class = "headerWrapper bg-black" style="--mdb-bg-opacity: 0.943">
     
     <nav class = "navbar">
+      
       <ul class = "navbarNav text-white">
         <li class="logo"><img src="./logo.svg"/></li> 
+        <div class="menuWrapper">
         <li class="dropdownMenu">
           Track
           <div class = "subMenu">
           <!-- item -->
             <div class = "subMenuItem">
               <h5 class="text-white">Track Experience</h5>
-              <ul class="text-white">
+              <ul class="links">
                 <li><a href = "#">About Track Experience</a></li>
                 <li><a href = "#">Training Levels</a></li>
                 <li><a href = "#">Training Specials</a></li>
@@ -37,7 +39,7 @@
             <!-- end of item -->
             <!-- item -->
             <div class = "subMenuItem">
-              <h5 class="text-white">Other categories</h5>
+              <h5 class="text-white links">Other categories</h5>
               <ul>
                 <li><a href = "#">iphones</a></li>
                 <li><a href = "#">speakers</a></li>
@@ -50,7 +52,127 @@
             <!-- item --> 
           </div>
         </li>
-
+        <li class="dropdownMenu">
+          Track
+          <div class = "subMenu">
+          <!-- item -->
+            <div class = "subMenuItem">
+              <h5 class="text-white">Track Experience</h5>
+              <ul class="text-white links">
+                <li><a href = "#">About Track Experience</a></li>
+                <li><a href = "#">Training Levels</a></li>
+                <li><a href = "#">Training Specials</a></li>
+                <li><a href = "#">Training Venues</a></li>
+                <li><a href = "#">Event Dates</a></li>
+              </ul>
+            </div>
+            <!-- end of item -->
+            <!-- item -->
+            <div class = "subMenuItem">
+              <h5 class="text-white links">Other categories</h5>
+              <ul>
+                <li><a href = "#">iphones</a></li>
+                <li><a href = "#">speakers</a></li>
+                <li><a href = "#">samsung devices</a></li>
+                <li><a href = "#">audio & headphones</a></li>
+                <li><a href = "#">vehicles electronics & GPS</a></li>
+              </ul>
+            </div>
+            <!-- end of item -->
+            <!-- item --> 
+          </div>
+        </li>
+        <li class="dropdownMenu">
+          Track
+          <div class = "subMenu">
+          <!-- item -->
+            <div class = "subMenuItem">
+              <h5 class="text-white">Track Experience</h5>
+              <ul class="text-white links">
+                <li><a href = "#">About Track Experience</a></li>
+                <li><a href = "#">Training Levels</a></li>
+                <li><a href = "#">Training Specials</a></li>
+                <li><a href = "#">Training Venues</a></li>
+                <li><a href = "#">Event Dates</a></li>
+              </ul>
+            </div>
+            <!-- end of item -->
+            <!-- item -->
+            <div class = "subMenuItem">
+              <h5 class="text-white links">Other categories</h5>
+              <ul>
+                <li><a href = "#">iphones</a></li>
+                <li><a href = "#">speakers</a></li>
+                <li><a href = "#">samsung devices</a></li>
+                <li><a href = "#">audio & headphones</a></li>
+                <li><a href = "#">vehicles electronics & GPS</a></li>
+              </ul>
+            </div>
+            <!-- end of item -->
+            <!-- item --> 
+          </div>
+        </li>
+        <li class="dropdownMenu">
+          Track
+          <div class = "subMenu">
+          <!-- item -->
+            <div class = "subMenuItem">
+              <h5 class="text-white">Track Experience</h5>
+              <ul class="text-white links">
+                <li><a href = "#">About Track Experience</a></li>
+                <li><a href = "#">Training Levels</a></li>
+                <li><a href = "#">Training Specials</a></li>
+                <li><a href = "#">Training Venues</a></li>
+                <li><a href = "#">Event Dates</a></li>
+              </ul>
+            </div>
+            <!-- end of item -->
+            <!-- item -->
+            <div class = "subMenuItem">
+              <h5 class="text-white links">Other categories</h5>
+              <ul>
+                <li><a href = "#">iphones</a></li>
+                <li><a href = "#">speakers</a></li>
+                <li><a href = "#">samsung devices</a></li>
+                <li><a href = "#">audio & headphones</a></li>
+                <li><a href = "#">vehicles electronics & GPS</a></li>
+              </ul>
+            </div>
+            <!-- end of item -->
+            <!-- item --> 
+          </div>
+        </li>
+        <li class="dropdownMenu">
+          Track
+          <div class = "subMenu">
+          <!-- item -->
+            <div class = "subMenuItem">
+              <h5 class="text-white">Track Experience</h5>
+              <ul class="text-white links">
+                <li><a href = "#">About Track Experience</a></li>
+                <li><a href = "#">Training Levels</a></li>
+                <li><a href = "#">Training Specials</a></li>
+                <li><a href = "#">Training Venues</a></li>
+                <li><a href = "#">Event Dates</a></li>
+              </ul>
+            </div>
+            <!-- end of item -->
+            <!-- item -->
+            <div class = "subMenuItem">
+              <h5 class="text-white links">Other categories</h5>
+              <ul>
+                <li><a href = "#">iphones</a></li>
+                <li><a href = "#">speakers</a></li>
+                <li><a href = "#">samsung devices</a></li>
+                <li><a href = "#">audio & headphones</a></li>
+                <li><a href = "#">vehicles electronics & GPS</a></li>
+              </ul>
+            </div>
+            <!-- end of item -->
+            <!-- item --> 
+          </div>
+        </li>
+        </div>
       </ul>
     </nav>
   </div>
