--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <nav class = "navbar">
       
       <ul class = "navbarNav text-white">
-        <li class="logo"><img src="./logo.svg"/></li> 
+        <li class="logo"><a href="./index.html"><img src="./logo.svg"/></a></li> 
         <div class="menuWrapper" onclick="showMenu()">
         <div class="dropdownWrapper">
         <li class="dropdownMenu">
@@ -36,7 +36,7 @@
             <div class = "subMenuItem">
               <h5 class="text-white">Blog Page</h5>
               <ul class="links">
-                <li><a href = "#">Link to Blog Page</a></li>
+                <li><a href = "./Blog/blog.html">Link to Blog Page</a></li>
               </ul>
             </div>
             <!-- end of item -->
@@ -50,7 +50,7 @@
             <div class = "subMenuItem">
               <h5 class="text-white">Quiz Page</h5>
               <ul class="links">
-                <li><a href = "#">Link to Quiz Page</a></li>
+                <li><a href = "./Quiz/quiz.html">Link to Quiz Page</a></li>
               </ul>
             </div>
             <!-- end of item -->
@@ -64,7 +64,7 @@
             <div class = "subMenuItem">
               <h5 class="text-white">Analytics Page</h5>
               <ul class="links">
-                <li><a href = "#">Link to Analytics Page</a></li>
+                <li><a href = "./Analytics/analytics.html">Link to Analytics Page</a></li>
               </ul>
             </div>
             <!-- end of item -->
