--- a/Quiz/quiz.html
+++ b/Quiz/quiz.html
@@ -87,7 +87,7 @@
   <!--main-->
   <main class="bg-black">
 
-    <form>
+    <form class="form-group">
 
       <section id="dataFromBlog">
         <h3>First section</h3>
