Change_pictures_font

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="./index.css">
-  <title>Porsche experience</title>
+  <title>1UI</title>
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;500&display=swap" rel="stylesheet">
 
 </head>
 
@@ -67,8 +67,7 @@
       <div class="ml-1">
         <h2>Recent Event Highlights</h2>
         <div class="row rowContent">
-          <div class="col-md-4"
-            onclick="location.href='https:/experience.porsche.com/Ice/Ice-Experience/Event-Dates/Porsche-Ice-Experience';">
+          <div class="col-md-4" onclick="location.href='./Blog/blog.html';">
             <img class="firstPic" src="./firstPic.jpeg" />
             <div>
               <p class="colHeader">
@@ -78,9 +77,9 @@
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut laoreet mauris ultrices ex vehicula condimentum. Suspendisse sodales, massa bibendum ullamcorper volutpat, velit ipsum suscipit sapien, sit amet pellentesque diam odio sit amet enim. Maecenas dignissim sed dui ac consectetur. Aenean fermentum velit sit amet accumsan congue. Nunc suscipit massa sit amet est aliquam porta.
               </p>
             </div>
-            <p class="colLink"><i class="arrow right"></i><a href="#"> Blog </a></p>
+            <p class="colLink"><i class="arrow right"></i><a href="./Blog/blog.html"> Blog </a></p>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4" onclick="location.href='./Quiz/quiz.html';">
             <img class="firstPic" src="./secondPic.jpeg" />
             <div>
               <p class="colHeader">
@@ -90,9 +89,9 @@
                 Vestibulum volutpat elit quis dolor commodo lobortis. Suspendisse molestie tempor tincidunt. In eget tincidunt massa. Proin ornare sem augue, a pellentesque risus malesuada vestibulum. Ut malesuada ultricies lacus. Morbi eleifend posuere lorem vitae viverra. Proin sed diam pellentesque, tempor lectus fermentum, cursus justo. Morbi eu massa metus.
               </p>
             </div>
-            <p class="colLink"><i class="arrow right"></i><a href="#"> Quiz </a></p>
+            <p class="colLink"><i class="arrow right"></i><a href="./Quiz/quiz.html"> Quiz </a></p>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4" onclick="location.href='./Analytics/analytics.html';">
             <img class="firstPic" src="./thirdPic.jpeg" />
             <div>
               <p class="colHeader">
@@ -103,7 +102,7 @@
                 Vestibulum ac dictum magna. Phasellus porta ligula sed nunc cursus, non facilisis diam consectetur. Fusce ullamcorper justo at hendrerit auctor. Curabitur imperdiet nunc vestibulum, consequat ipsum sed, gravida mi. Curabitur nunc velit, sollicitudin a vehicula eget, condimentum accumsan odio. Sed vitae elit eget orci aliquam vulputate non quis nulla.
               </p>
             </div>
-            <p class="colLink"><i class="arrow right"></i><a href="#"> Analytics</a></p>
+            <p class="colLink"><i class="arrow right"></i><a href="./Analytics/analytics.html"> Analytics</a></p>
           </div>
         </div>
       </div>
