Refactor all files

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 
 
-<body class="text-white">
+<body class="text-white" id="index">
 
   <!--header-->
   <header>
@@ -34,9 +34,9 @@
           </li>
           <div class="menuWrapper" onclick="showMenu()">
             <div class="linksWrapper">
-              <li ><a href="./Blog/blog.html">Blog</a></li>
-              <li><a href="./Quiz/quiz.html">Quiz</a></li>
-              <li><a href="./Analytics/analytics.html">Analytics</a></li>
+              <li ><a href="./blog.html">Blog</a></li>
+              <li><a href="./quiz.html">Quiz</a></li>
+              <li><a href="./analytics.html">Analytics</a></li>
             </div>
           </div>
         </ul>
@@ -50,9 +50,9 @@
 
 
   <!--main-->
-  <main>
+  <main class="indexMain">
     <div class="homePic">
-      <img class="indexImg" src="./homepic.jpeg" alt="home picture" />
+      <img class="indexImg" src="./assets/homepic.jpeg" alt="home picture" />
       <div class="text-white picCaption">
         <h2>Lorem ipsum dolor sit amet,</h2>
         <p>consectetur adipiscing elit.</p>
@@ -67,8 +67,8 @@
       <div class="ml-1">
         <h2>Recent Event Highlights</h2>
         <div class="row rowContent">
-          <div class="col-md-4" onclick="location.href='./Blog/blog.html';">
-            <img class="firstPic" src="./firstPic.jpeg" />
+          <div class="col-md-4" onclick="location.href='./blog.html';">
+            <img class="firstPic" src="./assets/firstPic.jpeg" />
             <div>
               <p class="colHeader">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -77,10 +77,10 @@
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut laoreet mauris ultrices ex vehicula condimentum. Suspendisse sodales, massa bibendum ullamcorper volutpat, velit ipsum suscipit sapien, sit amet pellentesque diam odio sit amet enim. Maecenas dignissim sed dui ac consectetur. Aenean fermentum velit sit amet accumsan congue. Nunc suscipit massa sit amet est aliquam porta.
               </p>
             </div>
-            <p class="colLink"><i class="arrow right"></i><a href="./Blog/blog.html"> Blog </a></p>
+            <p class="colLink"><i class="arrow right"></i><a href="./blog.html"> Blog </a></p>
           </div>
-          <div class="col-md-4" onclick="location.href='./Quiz/quiz.html';">
-            <img class="firstPic" src="./secondPic.jpeg" />
+          <div class="col-md-4" onclick="location.href='./quiz.html';">
+            <img class="firstPic" src="./assets/secondPic.jpeg" />
             <div>
               <p class="colHeader">
                 Vestibulum volutpat elit quis dolor commodo lobortis.
@@ -89,10 +89,10 @@
                 Vestibulum volutpat elit quis dolor commodo lobortis. Suspendisse molestie tempor tincidunt. In eget tincidunt massa. Proin ornare sem augue, a pellentesque risus malesuada vestibulum. Ut malesuada ultricies lacus. Morbi eleifend posuere lorem vitae viverra. Proin sed diam pellentesque, tempor lectus fermentum, cursus justo. Morbi eu massa metus.
               </p>
             </div>
-            <p class="colLink"><i class="arrow right"></i><a href="./Quiz/quiz.html"> Quiz </a></p>
+            <p class="colLink"><i class="arrow right"></i><a href="./quiz.html"> Quiz </a></p>
           </div>
-          <div class="col-md-4" onclick="location.href='./Analytics/analytics.html';">
-            <img class="firstPic" src="./thirdPic.jpeg" />
+          <div class="col-md-4" onclick="location.href='./analytics.html';">
+            <img class="firstPic" src="./assets/thirdPic.jpeg" />
             <div>
               <p class="colHeader">
                 Vestibulum ac dictum magna.
@@ -102,7 +102,7 @@
                 Vestibulum ac dictum magna. Phasellus porta ligula sed nunc cursus, non facilisis diam consectetur. Fusce ullamcorper justo at hendrerit auctor. Curabitur imperdiet nunc vestibulum, consequat ipsum sed, gravida mi. Curabitur nunc velit, sollicitudin a vehicula eget, condimentum accumsan odio. Sed vitae elit eget orci aliquam vulputate non quis nulla.
               </p>
             </div>
-            <p class="colLink"><i class="arrow right"></i><a href="./Analytics/analytics.html"> Analytics</a></p>
+            <p class="colLink"><i class="arrow right"></i><a href="./analytics.html"> Analytics</a></p>
           </div>
         </div>
       </div>
