--- a/blog.html
+++ b/blog.html
@@ -4,20 +4,20 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="./blog.css">
+    <link rel="stylesheet" href="./index.css">
     <title>My blog</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;500&display=swap" rel="stylesheet">
     
 </head>
 
 
 
 
-<body class="text-white bg-black">
+<body class="text-white bg-black" id="blog">
 
  <!--header-->
  <header>
@@ -28,13 +28,13 @@
 
       <ul class="navbarNav text-white">
         <li class="logo">
-          <h2><a href="../index.html">1UI</a></h2>
+          <h2><a href="./index.html">1UI</a></h2>
         </li>
         <div class="menuWrapper" onclick="showMenu()">
           <div class="linksWrapper">
             <li ><a href="./blog.html">Blog</a></li>
-            <li><a href="../Quiz/quiz.html">Quiz</a></li>
-            <li><a href="../Analytics/analytics.html">Analytics</a></li>
+            <li><a href="./quiz.html">Quiz</a></li>
+            <li><a href="./analytics.html">Analytics</a></li>
           </div>
         </div>
       </ul>
@@ -48,7 +48,7 @@
 
 
 <!--main-->
-<main class="bg-black">
+<main class="bg-black blogMain">
     
 <table class="table text-white">
     <tbody id="tbody">
@@ -140,8 +140,7 @@
 <!--footer-->
 
 </body>
-<script src="./blog.js"></script>
-<script src="../index.js"></script>
+<script src="./index.js"></script>
 
 
 
